Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5729

VFS: Busy inodes after unmount of loop0. Self-destruct in 5 seconds. Have a nice day...

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.7.0
    • None
    • 3
    • 16089

      Extra inode decrement is needed for scrub->os_inode(OI_scrub) in osd_scrub_setup in case of ENOSPACE error.
      It is simple to reproduce:

      1. mount ost as ldiskfs to mntpt
      2. fill mnt point to get ENOSPACE later(llverfs may be used for that)
      3. umount ost
      4. delete scrub files using writeconf
      5. mount ost

      These causes kernel message like below:

      VFS: Busy inodes after unmount of loop0. Self-destruct in 5 seconds. Have a nice day...
      

      xyratex-bug-id: MRP-2109

            jamesanunez James Nunez (Inactive)
            scherementsev Sergey Cheremencev
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: